reduce less stock of seed and added most bought stock api
